--- a/03-工程管理/05-单元测试.md
+++ b/03-工程管理/05-单元测试.md
@@ -59,6 +59,13 @@ go test -v -run Test_hello test/hello_test.go 			# 只执行Test_hello
 - Fail,Error：若测试失败，则测试会继续执行
 - FailNow,Fatal：若测试失败，则测试会终止
 
+#### 1.5 总结
+
+1. 测试用例文件必须以'_test.go‘结尾，xxx_test.go样式。
+2. 测试用例函数必须Test开头，一般Test+被测试函数名，eg.TestAddUpper
+3. TestAddUpper(t *tesing.T)形参类必须是**\*testing.T**
+4. 运行测试命令
+
 ## 二 代码覆盖率
 
 代码覆盖率命令：
