--- a/03-工程管理/05-单元测试.md
+++ b/03-工程管理/05-单元测试.md
@@ -15,10 +15,7 @@ go自带的testing单元测试框架使用要求：
 - 命令`go build/install`等正常编译操作会忽略测试文件
 
 
-#### 1.3 案例  
-
-文件目录：
-![](../images/go/09-01.png)  
+#### 1.3 案例    
 
 源码文件：`/hello/hello.go`
 ```go
@@ -61,10 +58,28 @@ go test -v -run Test_hello test/hello_test.go 			# 只执行Test_hello
 
 #### 1.5 总结
 
-1. 测试用例文件必须以'_test.go‘结尾，xxx_test.go样式。
-2. 测试用例函数必须Test开头，一般Test+被测试函数名，eg.TestAddUpper
-3. TestAddUpper(t *tesing.T)形参类必须是**\*testing.T**
+1. 测试用例文件必须以`_test.go`结尾，`xxx_test.go`样式。
+
+2. 测试用例函数必须`Test`开头，一般`Test+`被测试函数名，eg.TestAddUpper
+
+3. `TestAddUpper(t *tesing.T)`形参类必须是`*testing.T`
+
 4. 运行测试命令
+
+   ```
+   go test # 如果运行正确，无日志，错误时，会输出日志
+   go test -v # 运行正确或是错误，都输出日志
+   ```
+
+5. 出现错误时，用`t.Fatalf`来格式化输出错误信息，并退出程序
+
+6. `t.Logf`方法可以输出相应的日志
+
+7. 测试用例函数，并未放在`main`函数中，也执行了，这就是测试用例的方便之处
+
+8. 测试单个文件，带上被测试的原文件`go test -v xxx_test.go xx.go`
+
+9. 测试单个方法，`go test -v -test.run TestAddUpper`
 
 ## 二 代码覆盖率
 
